Retab & update formatting

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,9 +14,18 @@
 		
 		<style>
 		{% block style %}
-		div {
-		  margin: 10px;
-		}
+        .content {
+            margin: 10px;
+        }
+
+        .title {
+            margin: 10px;
+        }
+
+        .form div {
+            margin: 10px;
+            width: 80%;
+        }
 		{% endblock %}
 		</style>
     </head>
