--- a/templates/deck/download.html.twig
+++ b/templates/deck/download.html.twig
@@ -25,33 +25,12 @@
 				[Default]
 			{% endif %}
 		</p>
+		<p id="job-status">Job Status: Unchecked</p>
+		<p id="download-field"></p>
 	</div>
-{#<script>#}
+{% endblock %}
 
-  {#$.ajax({#}
-  {#  type: "GET",#}
-  {#  url: "{{ path('/ajax/deck/{{ deckId }}') }}",#}
-  {#  data: {deck_id: deck_id}#}
-	{#})#}
-	{#.done(function(data){#}
-
-	{#	if (typeof data.status != "undefined" && data.status != "undefined")#}
-	{#	{#}
-	{#		// At this point we know that the status is defined,#}
-	{#		// so we need to check for its value ("OK" in my case)#}
-	{#		if (data.status == "OK")#}
-	{#		{#}
-	{#			// At this point we know that the server response#}
-	{#			// is what we were expecting,#}
-	{#			// so retrive the response and use if#}
-
-	{#			if (typeof data.message != "undefined" && data.message != "undefined")#}
-	{#			{#}
-	{#				// Do whatever you need with data.message#}
-	{#			}#}
-	{#		}#}
-	{#	}#}
-	{#});#}
-
-{#</script>#}
+{% block javascripts %}
+	{{  parent() }}
+	{{ encore_entry_script_tags('deck-status') }}
 {% endblock %}
