Implement status check & file download

--- a/templates/deck/download.html.twig
+++ b/templates/deck/download.html.twig
@@ -25,8 +25,13 @@
 				[Default]
 			{% endif %}
 		</p>
-		<p id="job-status">Job Status: Unchecked</p>
-		<p id="download-field"></p>
+		<p>Job Status: <span id="job-status">Unchecked</span></p>
+		<div id="download-field"
+			 data-ajax-path = "{{ path('ajax.deck.status', {deckUid: deck.uid}) }}"
+			 data-download-link = "{{ deck.getLocalFilename() }}"
+			 data-filename = "{{ deck.getFinalFilename() }}"
+		>
+		</div>
 	</div>
 {% endblock %}
 
